{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 42,
  "lineage": "92fc7d76-e9c4-af22-6c5d-c3b3ef7553ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097693a5763edb93b",
            "association_id": "eipassoc-0c16bd5157b51d9cd",
            "domain": "vpc",
            "id": "eipalloc-097693a5763edb93b",
            "instance": "i-03e1cdfe6d63d1966",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08507786d09902980",
            "private_dns": "ip-10-0-0-151.ec2.internal",
            "private_ip": "10.0.0.151",
            "public_dns": "ec2-54-205-222-110.compute-1.amazonaws.com",
            "public_ip": "54.205.222.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hamzaci"
            },
            "tags_all": {
              "Name": "hamzaci"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0591e1c6a24d08458",
            "arn": "arn:aws:ec2:us-east-1:979490057625:instance/i-03e1cdfe6d63d1966",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e1cdfe6d63d1966",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08507786d09902980",
            "private_dns": "ip-10-0-0-151.ec2.internal",
            "private_ip": "10.0.0.151",
            "public_dns": "ec2-54-205-222-110.compute-1.amazonaws.com",
            "public_ip": "54.205.222.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080fd69236c106cbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b23d1598c884455",
            "tags": {
              "Name": "hamzacicloudwatch"
            },
            "tags_all": {
              "Name": "hamzacicloudwatch"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d175ae2d83c015d"
            ]
          },
          "dependencies": [
            "aws_security_group.hamzasg",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:internet-gateway/igw-078ede1b66a5380bb",
            "id": "igw-078ede1b66a5380bb",
            "owner_id": "979490057625",
            "tags": {
              "Name": "hamzaci1example-igw"
            },
            "tags_all": {
              "Name": "hamzaci1example-igw"
            },
            "vpc_id": "vpc-0caf4e850be69aef8"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:route-table/rtb-0869d2d8f9036c9a0",
            "id": "rtb-0869d2d8f9036c9a0",
            "owner_id": "979490057625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078ede1b66a5380bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hamzaciexample-route-table"
            },
            "tags_all": {
              "Name": "hamzaciexample-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4e850be69aef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f998a7e6b8181045",
            "route_table_id": "rtb-0869d2d8f9036c9a0",
            "subnet_id": "subnet-03b23d1598c884455"
          },
          "dependencies": [
            "aws_internet_gateway.example_igw",
            "aws_route_table.example_route_table",
            "aws_subnet.example_subnet",
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hamzasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:security-group/sg-01d175ae2d83c015d",
            "description": "allow access on ports 80 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d175ae2d83c015d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hamzaciec2 security group",
            "name_prefix": "",
            "owner_id": "979490057625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hamzasg"
            },
            "tags_all": {
              "Name": "hamzasg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4e850be69aef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:subnet/subnet-03b23d1598c884455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b23d1598c884455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979490057625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hamzaciexample-subnet"
            },
            "tags_all": {
              "Name": "hamzaciexample-subnet"
            },
            "vpc_id": "vpc-0caf4e850be69aef8"
          },
          "dependencies": [
            "aws_vpc.example_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979490057625:vpc/vpc-0caf4e850be69aef8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfaf31dcce4092a9",
            "default_route_table_id": "rtb-0b5a68af500ce3c6f",
            "default_security_group_id": "sg-09606d20195a3d121",
            "dhcp_options_id": "dopt-07ef62f1f880c50d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0caf4e850be69aef8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5a68af500ce3c6f",
            "owner_id": "979490057625",
            "tags": {
              "Name": "hamzaci-vpc2"
            },
            "tags_all": {
              "Name": "hamzaci-vpc2"
            }
          }
        }
      ]
    }
  ]
}